After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659749 - repository: Fix g_irepository_get_c_prefix()
repository: Fix g_irepository_get_c_prefix()
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-09-21 17:14 UTC by Colin Walters
Modified: 2015-02-07 16:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
repository: Fix g_irepository_get_c_prefix() (876 bytes, patch)
2011-09-21 17:14 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2011-09-21 17:14:56 UTC
It was returning the wrong data.
Comment 1 Colin Walters 2011-09-21 17:14:58 UTC
Created attachment 197176 [details] [review]
repository: Fix g_irepository_get_c_prefix()
Comment 2 Travis Reitter 2011-09-21 17:30:01 UTC
Review of attachment 197176 [details] [review]:

This fixes the problem for me.
Comment 3 Colin Walters 2011-09-21 18:09:38 UTC
Attachment 197176 [details] pushed as e8b336c - repository: Fix g_irepository_get_c_prefix()
Comment 4 André Klapper 2015-02-07 16:49:36 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]