repository: Fix g_irepository_get_c_prefix()

It was returning the wrong data.

https://bugzilla.gnome.org/show_bug.cgi?id=659749